// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Buttons > Buttons component renders correctly 1`] = `
<button
  className=""
>
  <span
    className="p-4 font-[Raleway]"
  >
    Click Me
  </span>
</button>
`;

exports[`Buttons > The Buttons prop works 1`] = `
<button
  className="bg-blue-500 hover:bg-blue-700 p-4 rounded-md hover:shadow-lg  "
  onClick={[Function]}
>
  <span
    className="p-4 font-[Raleway]"
  >
    Button
  </span>
</button>
`;
